<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:dividerDrawable="@drawable/flexbox_divider"
        app:flexWrap="wrap"
        app:justifyContent="flex_start"
        app:showDivider="middle">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:minWidth="60dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_all"
            android:textColor="@drawable/selector_color_white_primary"
            android:textSize="16sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:gravity="center"
            android:minWidth="60dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_business"
            android:textColor="@drawable/selector_color_white_primary"
            android:textSize="16sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:gravity="center"
            android:minWidth="60dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_entertainment"
            android:textColor="@drawable/selector_color_white_primary"
            android:textSize="16sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:gravity="center"
            android:minWidth="60dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_general"
            android:textColor="@drawable/selector_color_white_primary"
            android:textSize="16sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:gravity="center"
            android:minWidth="60dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_health"
            android:textColor="@drawable/selector_color_white_primary"
            android:textSize="16sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:gravity="center"
            android:minWidth="60dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_science"
            android:textColor="@drawable/selector_color_white_primary"
            android:textSize="16sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:gravity="center"
            android:minWidth="60dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_sports"
            android:textColor="@drawable/selector_color_white_primary"
            android:textSize="16sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:gravity="center"
            android:minWidth="60dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_technology"
            android:textColor="@drawable/selector_color_white_primary"
            android:textSize="16sp"/>

    </com.google.android.flexbox.FlexboxLayout>


</RadioGroup>